# iTunnel

./: .gitignore  CLIENT_MODE_IMPLEMENTATION.md  Cargo.toml  DEPLOYMENT.md  FIX_SUMMARY.md  QUICK_START.md  README.md  README_RUN.md  build.rs  build_release.sh  build_tauri.sh  note.md  run_app_sudo.sh  run_background.sh  ss-config.json  ss-tun.sh  status.sh  stop.sh  tauri.conf.json  test_app.sh  vpn_gateway.sh
.github/agents/: itunnel-dev.agent.md
asset/: gfwlist.txt
frontend/: index.html  note.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: ico_to_svg.py
frontend/src/: App.vue  main.ts  router-meta.d.ts  server-fetch.ts  style.css
frontend/src/components/: Sidebar.vue  StatCard.vue  TopBar.vue  useTheme.ts
frontend/src/composables/: useWireGuardMode.ts
frontend/src/config/: app.ts
frontend/src/layouts/: Layout.vue
frontend/src/pages/: ClientOverview.vue  Endpoints.vue  Login.vue  Logs.vue  Metrics.vue  Overview.vue  OverviewSwitcher.vue  Peers.vue  ServerOverview.vue  Settings.vue  Subscribe.vue
frontend/src/pages/Settings/: EnhanceMode.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts  wireguard-api.ts
frontend/src/stores/: endpoints.ts  settings.ts  wireguard.ts
frontend/src/utils/: qr-image.ts  wg-uri.ts
libs/: FAKEIP_DESIGN.md
libs/linux/: README.txt
libs/windows/: libwg-go.h
scripts/: env-github-proxy.ps1
src/: command_ext.rs  lib.rs  main.rs
src/api/: jwt.rs  local_api.rs  mod.rs  remote_api.rs  server_local_api.rs  server_session.rs
src/config/: machine_id.rs  mod.rs
src/dns/: backend.rs  error.rs  macos.rs  mod.rs  model.rs  parse.rs  session.rs  snapshot.rs  state.rs  stub.rs
src/fakeip/: mod.rs
src/interface/: gateway.rs  mod.rs
src/logging/: mod.rs
src/speedtest/: mod.rs
src/wg/: client.rs  config.rs  mod.rs  old.rs  server.rs  store.rs  tun.rs
src/winnet/: network.rs
windows/: app.manifest
