[package]
name = "itunnel"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
# Required so Cargo sets OUT_DIR for `tauri::generate_context!()` and runs `tauri_build::build()`.
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
log = "0.4"
env_logger = "0.11.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.5", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2.0"
actix-web = "4.12.1"
actix-files = "0.6.9"
chrono = "0.4.42"
watch = "0.2.3"
network-interface = "1.1.3"
libc = "0.2"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.43", features = ["full"] }
aes = "0.8"
cfb-mode = "0.8"
rand = "0.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rust-embed = "8.11.0"
mime_guess = "2.0.5"

